# Sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sentinel.toml
docs/: integracao-http.md
examples/: hostile-message.json
scripts/: refresh_provider_fixtures.py
sidecar/baileys/: index.mjs  package.json
sidecar/whatsmeow/: go.mod  go.sum  main.go
src/sentinel/: __init__.py  alerts.py  classifier.py  cli.py  config.py  db.py  env.py  heuristics.py  models.py  normalization.py  prompts.py  providers.py  reports.py  schema.py  server.py  service.py  utils.py
src/sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py  test_env.py  test_heuristics.py  test_normalization.py  test_pipeline.py  test_providers.py  test_server.py
tests/fixtures/providers/: gemini_generate_content_fixture.json  gemini_missing_candidates_fixture.json  gemini_missing_parts_fixture.json  groq_transcription_empty_response_fixture.json  groq_transcription_error_fixture.json  groq_transcription_fixture.json  groq_transcription_missing_text_fixture.json
